FIX / a few button collapse

--- a/client/src/utils/utils.scss
+++ b/client/src/utils/utils.scss
@@ -215,10 +215,9 @@ button,
   font-size: var(--input-font-size);
   text-decoration: none;
   color: inherit;
-  white-space: nowrap;
   cursor: pointer;
   background-color: var(--c-gris_clair);
-  white-space: break-spaces;
+  white-space: normal;
 
   padding: calc(var(--spacing) / 2) calc(var(--spacing) / 1);
   border-radius: var(--input-border-radius);
